--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
   "keywords": [],
   "author": "Kevin Tucker",
   "bin": {
-    "helloWorld": "./src/index.js"
+    "photo-album": "./src/index.js"
   },
   "devDependencies": {
+    "chance": "1.1.8",
     "jest": "27.5.1"
+  },
+  "dependencies": {
+    "node-fetch": "2.6.7",
+    "yargs": "17.4.0"
   }
 }
